tests/ui/compile-fail/init/wrong_generics2.stderr
error[E0107]: struct takes 1 generic argument but 2 generic arguments were supplied
 --> tests/ui/compile-fail/init/wrong_generics2.rs:7:19
  |
7 |     let _ = init!(Foo::<(), ()> {
  |                   ^^^     ---- help: remove the unnecessary generic argument
  |                   |
  |                   expected 1 generic argument
  |
note: struct defined here, with 1 generic parameter: `T`
 --> tests/ui/compile-fail/init/wrong_generics2.rs:3:8
  |
3 | struct Foo<T> {
  |        ^^^ -
